spacing issue

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ header .phone a,header .mail a{
 
   } */
 
-.navbar-toggler:focus{
+  .navbar-toggler:focus{
     outline: none;
     box-shadow: none;
 }
@@ -476,6 +476,17 @@ padding: 40px;
     font-size: 12px;
     font-weight: 700;
 }
+@media screen and (max-width: 767px) {
+    .services3-section{
+        margin-top: 20%;
+        margin-bottom: 20%;
+    }
+    .testimonial-section{
+        padding-top: 12%;
+        
+    }
+    
+}
 .services3-section h1{
     font-size: 40px;
     font-weight: 700;
@@ -535,6 +546,13 @@ padding: 40px;
     margin-bottom: 20%;
     position: relative;
 
+}
+@media screen and (max-width: 767px) {
+    .testimonial-section{
+        padding-top: 12%;
+        margin-bottom: 60%;
+    }
+    
 }
 .overlay{
     position: absolute;
@@ -739,7 +757,7 @@ position: relative;
     font-size: 15px;
    
 }
-.form-content form input:focus{
+.form-content form input:focus,.form-content form select:focus{
     outline: none;
     box-shadow: none;
     border: none;
@@ -749,9 +767,10 @@ position: relative;
     box-shadow: none;
     border: none;
 }
-.form-content form input{
+.form-content form input,.form-content form select{
     padding: 25px 9px;
 }
+
 .form-content form textarea{
     padding: 45px 9px;
 }
